macOS: Make alpha-based click-trough work again

Commit 3ea04c7d made it so that we always set the
ignoresMouseEvent property on the NSWindow, based
on the WindowTransparentForInput flag.

However, this overwrites the magical secret initial
state where click-trough is determined based on window
content transparency - setting the property to false
makes the window capture all events.

Restore 5.5 behavior by not modifying ignoresMouseEvent
if we can. Toggling WindowTransparentForInput on and
off again is still broken.

Task-number: QTBUG-54830
Change-Id: I5f44ce14d9a7dc1713f9efb1ef929e2969838d90
(cherry picked from commit c35fc435950437d3d046b17d06593873d7b82011)
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>